crates/flight-profile/tests/snapshots/profile_snapshots__default_empty_profile_json.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: profile
---
{
  "schema": "flight.profile/1",
  "sim": null,
  "aircraft": null,
  "axes": {},
  "pof_overrides": null
}
