crates/flight-profile/tests/snapshots/profile_snapshots__merge_adds_new_axis.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: merged
---
{
  "schema": "flight.profile/1",
  "sim": "msfs",
  "aircraft": {
    "icao": "C172"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.2,
      "slew_rate": 1.2,
      "detents": [],
      "curve": null,
      "filter": null
    },
    "roll": {
      "deadzone": 0.05,
      "expo": null,
      "slew_rate": null,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
