crates/flight-profile/tests/snapshots/profile_snapshots__merge_overrides_existing_field.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: merged
---
{
  "schema": "flight.profile/1",
  "sim": "msfs",
  "aircraft": {
    "icao": "C172"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.5,
      "slew_rate": 1.2,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
