crates/flight-profile/tests/snapshots/profile_snapshots__merge_overrides_sim_and_aircraft.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: merged
---
{
  "schema": "flight.profile/1",
  "sim": "xplane",
  "aircraft": {
    "icao": "B738"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.2,
      "slew_rate": 1.2,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
