crates/flight-profile/tests/snapshots/profile_snapshots__migration_error_invalid_schema.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: err.to_string()
---
invalid schema: missing or invalid 'axes' object
