crates/flight-profile/tests/snapshots/profile_snapshots__migration_error_unsupported_version.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: err.to_string()
---
unsupported version: no migration path from v0 to v3
