crates/flight-profile/tests/snapshots/profile_snapshots__migration_v1_to_v2.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: v2
---
{
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.2,
      "sensitivity": 1.0
    },
    "roll": {
      "deadzone": 0.05,
      "expo": 0.3,
      "sensitivity": 1.0
    }
  },
  "schema_version": "v2"
}
