crates/flight-profile/tests/snapshots/profile_snapshots__migration_v2_to_v3.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: v3
---
{
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "exponential": 0.2,
      "response_curve_type": "default",
      "sensitivity": 1.0
    },
    "roll": {
      "deadzone": 0.05,
      "exponential": 0.3,
      "response_curve_type": "default",
      "sensitivity": 1.0
    }
  },
  "schema_version": "v3"
}
