crates/flight-profile/tests/snapshots/profile_snapshots__single_axis_profile_json.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: profile
---
{
  "schema": "flight.profile/1",
  "sim": "msfs",
  "aircraft": {
    "icao": "C172"
  },
  "axes": {
    "pitch": {
      "deadzone": 0.03,
      "expo": 0.2,
      "slew_rate": 1.2,
      "detents": [],
      "curve": null,
      "filter": null
    }
  },
  "pof_overrides": null
}
