crates/flight-profile/tests/snapshots/profile_snapshots__validation_error_bad_schema_version.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: err.to_string()
---
Validation error: Unsupported schema version: flight.profile/99
