crates/flight-profile/tests/snapshots/profile_snapshots__validation_error_expo_out_of_range.snap
---
source: crates/flight-profile/tests/profile_snapshots.rs
expression: err.to_string()
---
Validation error: axes.pitch.expo: Expo must be between 0.0 and 1 in Full mode
